Se cambia el boton 'create new map' por 'clear configuration' que es mas descriptivo.

--- a/editor/qtdesigner/editor_launcher.ui
+++ b/editor/qtdesigner/editor_launcher.ui
@@ -682,7 +682,7 @@
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionNew_map">
    <property name="text">
-    <string>New map</string>
+    <string>Clear Configuration</string>
    </property>
   </action>
   <action name="actionLoad_and_Edit">
